<resources>
    <string name="app_name">Consultorio</string>
    <string name="email_edit_text">Ingrese su correo</string>
    <string name="password_edit_text">Ingrese la contraseña</string>
    <string name="enter_button_str">Ingresar</string>
    <string name="app_title">Consultorio Covid-19</string>

    <!--Card labels-->
    <string name="card_cedula">Cédula:</string>
    <string name="card_persona">Persona:</string>
    <string name="card_asunto">Asunto:</string>
    <string name="card_descripcion">Descripción:</string>
    <string name="card_prioridad">Prioridad:</string>
    <string name="card_btn_responder">Responder</string>
    <string name="card_btn_editar">Editar</string>
    <string name="card_btn_eliminar">Eliminar</string>

    <!-- Crear Solicitud labels -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datos_del_solicitante"><b>Datos del Solicitante</b></string>
    <string name="id"><b>Id:</b></string>
    <string name="nombre"><b>Nombre:</b></string>
    <string name="email"><b>E-mail</b></string>
    <string name="tel_cel"><b>Teléfono/Cel:</b></string>

    <string name="descripcion_consulta">Descripción</string>
    <string name="descripcion_consulta_bold"><b>Descripción:</b></string>
    <string name="recibir_respuesta">Medio por el cual desea recibir su respuesta:</string>
    <string name="recibir_respuesta_bold"><b>Medio por el cual desea recibir su respuesta:</b></string>
    <string name="asunto_de_su_consulta">Asunto de su consulta</string>
    <string name="asunto_de_su_consulta_bold"><b>Asunto de su consulta:</b></string>
    <string name="prioridad_consulta">Prioridad de la Consulta:</string>
    <string name="prioridad_consulta_bold"><b>Prioridad de la Consulta:</b></string>


    <!--layout expansible-->
    <string name="layout_expansible_datos_solicitud">Datos de la solicitud</string>
    <string name="layout_expansible_respuesta_descripcion">Respuesta a la solicitud</string>
    <string name="layout_expansible_trazabilidad">Trazabilidad</string>
    <string name="txt_respuesta_descripcion">Descripción de la respuesta</string>
    <string name="btn_guardar_respuesta">Guardar</string>
    <string name="card_movimiento">Movimiento:</string>
    <string name="card_usuario">Usuario:</string>
    <string name="card_fecha">Fecha:</string>

    <!-- Registrarse labels-->
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="bienvenida_registrarse">Bienvenidos al Consultorio. Por favor ingresa los siguientes datos:</string>
    <string name="identificacion_registro">Número de Identificación</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellidos_registro">Apellidos</string>
    <string name="telefono_registro">Teléfono</string>
    <string name="correo_registro">Correo electrónico</string>
    <string name="pass_registro">Contraseña</string>

    <!-- Login labels-->
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>

    <!-- Filter labels-->
    <string name="cedula_filtros">Cédula</string>
    <string name="persona_filtros">Persona</string>
    <string name="alta_prioridad">Alta</string>
    <string name="media_prioridad">Media</string>
    <string name="baja_prioridad">Baja</string>
    <string name="documentos_para_anexar">Documentos para anexar:</string>
    <string name="subir_archivo">subir archivo</string>
    <string name="busqueda_avanzada">Búsqueda Avanzada</string>
    <string name="por_cedula">Por Cédula</string>
    <string name="alta_chip_filtro">Alta</string>
    <string name="media_chip_filtro">Media</string>
    <string name="baja_chip_filtro">Baja</string>
    <string name="guardar_solicitud">Guardar</string>
    <string name="cancelar_solicitud">Cancelar</string>

    <string name="logo_app">logo_udea</string>
    <string name="enviar_informacion">enviar_información</string>
    <string name="salir_info">salir</string>
    <string name="por_persona">Por Persona</string>
    <string name="por_prioridad">Por Prioridad</string>
    <string name="sin_puntos_ni_espacios">Sin puntos, ni espacios</string>
    <string name="ingrese_texto">Ingrese texto</string>

    <string-array name="prioridad_array">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <!-- Items Menu labels-->
    <string name="inicio">Inicio</string>
    <string name="crear_solicitud">Crear solicitud</string>
    <string name="ayuda">Ayuda</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>



</resources>
