<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_layout_solictud"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/layout_cedula"
            style="@style/card_layout">

            <TextView
                android:id="@+id/txt_cedula_key"
                android:text="@string/card_cedula"
                style="@style/card_txt_key"/>

            <TextView
                android:id="@+id/txt_cedula_value"
                style="@style/card_txt_value"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_persona"
            style="@style/card_layout">

            <TextView
                android:id="@+id/txt_persona_key"
                android:text="@string/card_persona"
                style="@style/card_txt_key"/>

            <TextView
                android:id="@+id/txt_persona_value"
                style="@style/card_txt_value" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_asunto"
            style="@style/card_layout">

            <TextView
                android:id="@+id/txt_asunto_key"
                android:text="@string/card_asunto"
                style="@style/card_txt_key" />

            <TextView
                android:id="@+id/txt_asunto_value"
                style="@style/card_txt_value"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_descripcion"
            style="@style/card_layout">

            <TextView
                android:id="@+id/txt_descripcion_key"
                android:text="@string/card_descripcion"
                style="@style/card_txt_key"/>

            <TextView
                android:id="@+id/txt_descripcion_value"
                style="@style/card_txt_value" />

        </LinearLayout>

        <LinearLayout
            style="@style/card_layout"
            android:id="@+id/layout_prioridad">

            <TextView
                android:id="@+id/txt_prioridad_key"
                android:text="@string/card_prioridad"
                style="@style/card_txt_key" />

            <TextView
                android:id="@+id/txt_prioridad_value"
                style="@style/card_txt_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_acciones"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_mode_edit_black_24dp"
                android:text="@string/card_btn_editar" />

            <Button
                android:id="@+id/btn_responder"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/card_btn_responder" />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_delete_black_24dp"
                android:text="@string/card_btn_eliminar" />

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>