<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout_datos"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="20dp"
    android:orientation="vertical">


        <TextView
            android:id="@+id/txt_datosSolicitante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos_del_solicitante"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/id" />

        <TextView
            android:id="@+id/txt_nombre_solicitante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/txt_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/txt_cel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_cel" />

        <TextView
            android:id="@+id/txt_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="byk98m7" />

        <TextView
            android:id="@+id/txt_nombre_solicitante_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Santiago Muñoz" />

        <TextView
            android:id="@+id/txt_correo_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="santiago12@gmail.com" />

        <TextView
            android:id="@+id/txt_cel_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="312 678 4554" />



</GridLayout>