<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo_inicio"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_verde_udea" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="27sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_edit_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_edit_text"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/loginButton"
            style="@style/custom_button"
            android:layout_width="99dp"
            android:layout_height="33dp"
            android:fontFamily="@font/roboto_slab_regular"
            android:text="@string/enter_button_str"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_cuenta"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btn_registrarse"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/roboto_slab_regular"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/registrarse"
               />

        </LinearLayout>

            />


    </LinearLayout>

</layout>