<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/datos_solicitante_layout"
            android:id="@+id/datos_solicitud_layout"/>


        <TextView
            android:id="@+id/txt_asunto_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datos_solicitud_layout"
            android:text="@string/asunto_de_su_consulta_bold" />


        <TextView
            android:id="@+id/txt_asunto_value"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_asunto_key"
            android:ems="10" />

        <TextView
            android:id="@+id/txt_descripcion_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_asunto_value"
            android:layout_marginTop="10dp"
            android:text="@string/descripcion_consulta_bold" />


        <TextView
            android:id="@+id/txt_descripcion_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_descripcion_key"/>


        <TextView
            android:id="@+id/txt_medio_respuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_descripcion_value"
            android:layout_marginTop="10dp"
            android:text="@string/recibir_respuesta_bold" />


        <TextView
            android:id="@+id/txt_medio_respuesta_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_medio_respuesta" />


        <LinearLayout
            android:id="@+id/gridLayout_Prioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_medio_respuesta_value"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_prioridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioridad_consulta_bold" />


            <TextView
                android:id="@+id/txt_prioridad_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

        </LinearLayout>

    </RelativeLayout>
</layout>