<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreacionSolicitudFragment">

    <!-- DATOS DEL SOLICITANTE -->

    <!-- DATOS DESDE LA BD PARA SOLICITANTE-->

    <TextView
        android:id="@+id/txt_datos_solicitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/datos_del_solicitante" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="57dp"
        android:text="@string/id" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="76dp"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="96dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/txt_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="116dp"
        android:text="@string/tel_cel" />

    <TextView
        android:id="@+id/txt_rta_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="164dp"
        android:layout_marginTop="53dp"
        android:text="byu34k67" />

    <TextView
        android:id="@+id/txt_rta_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="73dp"
        android:text="Santiago Muñoz" />

    <TextView
        android:id="@+id/txt_rta_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="91dp"
        android:text="santiago12@gmail.com" />

    <!-- DETALLES CONSULTA-->

    <TextView
        android:id="@+id/txt_rta_cel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="163dp"
        android:layout_marginTop="112dp"
        android:text="314 678 6789" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="150dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:hint="Asunto de su consulta" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="224dp"
        android:text="@string/descripcion_consulta" />


    <EditText
        android:id="@+id/textArea_descripcion_consulta"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_descripcion"
        android:layout_centerInParent="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:inputType="textMultiLine"
        android:lines="3" />

    <TextView
        android:id="@+id/txt_documentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="92dp"
        android:text="Documentos de soporte:" />

    <RadioGroup
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="135dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBtn_baja"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="Baja" />

        <RadioButton
            android:id="@+id/media"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Media" />

        <RadioButton
            android:id="@+id/radioBtn_alta"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="Alta" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="11dp"
        android:text="Enviar" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="12dp"
        android:text="Cancelar" />

    <TextView
        android:id="@+id/txt_medio_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="300dp"
        android:text="Medio por el que desea recibir su respuesta:" />

    <Spinner
        android:id="@+id/spinner_medio_respuesta"
        android:layout_width="275dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="243dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="186dp"
        android:text="Prioridad de la consulta:" />


</RelativeLayout>